--- a/graphic-design.html
+++ b/graphic-design.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.2/gsap.min.js"
       defer
@@ -65,7 +66,7 @@
 
     <section id="core-container">
       <div class="cores graphic">
-        <div class="core">
+        <div class="core" data-aos="fade-up">
           <div class="core-img">
             <img
               src="./assets/graphic-design/desktop/image-change.jpg"
@@ -80,7 +81,7 @@
           </div>
         </div>
 
-        <div class="core">
+        <div class="core" data-aos="fade-up">
           <div class="core-img">
             <img
               src="./assets/graphic-design/desktop/image-boxed-water.jpg"
@@ -95,7 +96,7 @@
           </div>
         </div>
 
-        <div class="core">
+        <div class="core" data-aos="fade-up">
           <div class="core-img">
             <img
               src="./assets/graphic-design/desktop/image-science.jpg"
@@ -114,7 +115,7 @@
 
     <section id="services-container">
       <div class="services">
-        <a href="app-design.html" class="service app">
+        <a href="app-design.html" class="service app" data-aos="fade-up">
           <div class="content">
             <div class="service-type">app design</div>
             <div class="link">
@@ -123,7 +124,7 @@
           </div>
         </a>
 
-        <a href="web-design.html" class="service web">
+        <a href="web-design.html" class="service web" data-aos="fade-up">
           <div class="content">
             <div class="service-type">web design</div>
             <div class="link">
@@ -142,7 +143,7 @@
         />
       </div>
       <div class="cta">
-        <div class="cta-content">
+        <div class="cta-content" data-aos="fade-up">
           <h2 class="cta-content-header">Let's talk about your project</h2>
 
           <p class="cta-content-copy">
@@ -197,5 +198,10 @@
         </div>
       </div>
     </footer>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
