--- a/locations.html
+++ b/locations.html
@@ -15,6 +15,7 @@
       integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
       crossorigin=""
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script
       src="https://unpkg.com/leaflet@1.9.1/dist/leaflet.js"
       integrity="sha256-NDI0K41gVbWqfkkaHj15IzU7PtMoelkzyKp8TOaFQ3s="
@@ -49,7 +50,7 @@
     <section id="locations-container">
       <div class="locations">
         <div class="location">
-          <div class="location-content">
+          <div class="location-content" data-aos="fade-up">
             <h2 class="location-content-header">Canada</h2>
 
             <div class="location-content-address">
@@ -78,7 +79,7 @@
         </div>
 
         <div class="location location-au">
-          <div class="location-content">
+          <div class="location-content" data-aos="fade-up">
             <h2 class="location-content-header">Australia</h2>
 
             <div class="location-content-address">
@@ -107,7 +108,7 @@
         </div>
 
         <div class="location">
-          <div class="location-content">
+          <div class="location-content" data-aos="fade-up">
             <h2 class="location-content-header">United Kingdom</h2>
 
             <div class="location-content-address">
@@ -145,7 +146,7 @@
         />
       </div>
       <div class="cta">
-        <div class="cta-content">
+        <div class="cta-content" data-aos="fade-up">
           <h2 class="cta-content-header">Let's talk about your project</h2>
 
           <p class="cta-content-copy">
@@ -203,5 +204,9 @@
 
     <script src="shared.js"></script>
     <script src="locations.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
