--- a/web-design.html
+++ b/web-design.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.2/gsap.min.js"
       defer
@@ -65,7 +66,7 @@
 
     <section id="core-container">
       <div class="cores">
-        <div class="core">
+        <div class="core" data-aos="fade-up">
           <div class="core-img">
             <img src="./assets/web-design/desktop/image-express.jpg" alt="" />
           </div>
@@ -77,7 +78,7 @@
           </div>
         </div>
 
-        <div class="core">
+        <div class="core" data-aos="fade-up">
           <div class="core-img">
             <img src="./assets/web-design/desktop/image-transfer.jpg" alt="" />
           </div>
@@ -89,7 +90,7 @@
           </div>
         </div>
 
-        <div class="core">
+        <div class="core" data-aos="fade-up">
           <div class="core-img">
             <img src="./assets/web-design/desktop/image-photon.jpg" alt="" />
           </div>
@@ -102,7 +103,7 @@
           </div>
         </div>
 
-        <div class="core">
+        <div class="core" data-aos="fade-up">
           <div class="core-img">
             <img src="./assets/web-design/desktop/image-builder.jpg" alt="" />
           </div>
@@ -114,7 +115,7 @@
           </div>
         </div>
 
-        <div class="core">
+        <div class="core" data-aos="fade-up">
           <div class="core-img">
             <img src="./assets/web-design/desktop/image-blogr.jpg" alt="" />
           </div>
@@ -126,7 +127,7 @@
           </div>
         </div>
 
-        <div class="core">
+        <div class="core" data-aos="fade-up">
           <div class="core-img">
             <img src="./assets/web-design/desktop/image-camp.jpg" alt="" />
           </div>
@@ -142,7 +143,7 @@
 
     <section id="services-container">
       <div class="services">
-        <a href="app-design.html" class="service app">
+        <a href="app-design.html" class="service app" data-aos="fade-up">
           <div class="content">
             <div class="service-type">app design</div>
             <div class="link">
@@ -151,7 +152,11 @@
           </div>
         </a>
 
-        <a href="graphic-design.html" class="service graphic">
+        <a
+          href="graphic-design.html"
+          class="service graphic"
+          data-aos="fade-up"
+        >
           <div class="content">
             <div class="service-type">graphic design</div>
             <div class="link">
@@ -170,7 +175,7 @@
         />
       </div>
       <div class="cta">
-        <div class="cta-content">
+        <div class="cta-content" data-aos="fade-up">
           <h2 class="cta-content-header">Let's talk about your project</h2>
 
           <p class="cta-content-copy">
@@ -225,5 +230,10 @@
         </div>
       </div>
     </footer>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
