--- a/app-design.html
+++ b/app-design.html
@@ -60,9 +60,11 @@
       </div>
     </section>
 
-    <div class="bg-pattern pattern-1">
-      <img src="./assets/shared/desktop/bg-pattern-leaf.svg" alt="" />
-    </div>
+    <img
+      class="bg-pattern pattern-1"
+      src="./assets/shared/desktop/bg-pattern-leaf.svg"
+      alt=""
+    />
 
     <section id="core-container">
       <div class="cores">
