--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,13 @@
 
         <div class="links-container">
           <ul class="links">
-            <li class="link"><a href="about.html">our company</a></li>
+            <li class="link">
+              <a href="about.html">our company</a>
+            </li>
             <li class="link"><a href="locations.html">locations</a></li>
-            <li class="link"><a href="contact.html">contact</a></li>
+            <li class="link">
+              <a class="active" href="contact.html">contact</a>
+            </li>
           </ul>
         </div>
 
@@ -195,13 +199,11 @@
       </div>
     </section>
 
-    <div class="bg-pattern pattern-2">
-      <img
-        class="bg-pattern pattern-2"
-        src="./assets/shared/desktop/bg-pattern-leaf.svg"
-        alt=""
-      />
-    </div>
+    <img
+      class="bg-pattern pattern-2"
+      src="./assets/shared/desktop/bg-pattern-leaf.svg"
+      alt=""
+    />
 
     <footer id="footer-container">
       <div class="footer">
@@ -214,7 +216,9 @@
             <ul class="links">
               <li class="link"><a href="about.html">our company</a></li>
               <li class="link"><a href="locations.html">locations</a></li>
-              <li class="link"><a href="contact.html">contact</a></li>
+              <li class="link">
+                <a class="active" href="contact.html">contact</a>
+              </li>
             </ul>
           </div>
         </div>
