--- a/about.html
+++ b/about.html
@@ -28,7 +28,9 @@
 
         <div class="links-container">
           <ul class="links">
-            <li class="link"><a href="about.html">our company</a></li>
+            <li class="link">
+              <a class="active" href="about.html">our company</a>
+            </li>
             <li class="link"><a href="locations.html">locations</a></li>
             <li class="link"><a href="contact.html">contact</a></li>
           </ul>
@@ -67,13 +69,11 @@
       </div>
     </section>
 
-    <div class="bg-pattern pattern-1">
-      <img
-        class="bg-pattern pattern-1"
-        src="./assets/shared/desktop/bg-pattern-leaf.svg"
-        alt=""
-      />
-    </div>
+    <img
+      class="bg-pattern pattern-1"
+      src="./assets/shared/desktop/bg-pattern-leaf.svg"
+      alt=""
+    />
 
     <section id="talent-container">
       <div class="talent">
@@ -176,13 +176,11 @@
       </div>
     </section>
 
-    <div class="bg-pattern pattern-2">
-      <img
-        class="bg-pattern pattern-2"
-        src="./assets/shared/desktop/bg-pattern-leaf.svg"
-        alt=""
-      />
-    </div>
+    <img
+      class="bg-pattern pattern-2"
+      src="./assets/shared/desktop/bg-pattern-leaf.svg"
+      alt=""
+    />
 
     <section id="deal-container">
       <div class="deal">
@@ -247,7 +245,9 @@
 
           <div class="footer-top-links-container">
             <ul class="links">
-              <li class="link"><a href="about.html">our company</a></li>
+              <li class="link">
+                <a class="active" href="about.html">our company</a>
+              </li>
               <li class="link"><a href="locations.html">locations</a></li>
               <li class="link"><a href="contact.html">contact</a></li>
             </ul>
